# Linda_using_IPC_Queues

./: DataStructs.h  Makefile  README.md  Server.h  main.cpp
Client/: Addons.h  Lexer.cpp  Lexer.h  Main.cpp  Makefile  Parser.cpp  Source.cpp  Structs.h  Token.cpp  Token.h  client  linda.cpp  linda.h
Linda/: Makefile  linda  linda.cpp  main.cpp
Parser/: Addons.h  CMakeLists.txt  Lexer.cpp  Lexer.h  Main.cpp  Makefile  Parser.cpp  Parser.h  Source.cpp  Source.h  Structs.h  Token.cpp  Token.h  parser
Server/: Makefile  Server.h  Structs.h  main.cpp  server
